reports component added

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,12 @@
 .app-container {
   display: flex;
-  min-height: 100vh;
+  //min-height: 99vh;
 }
 
 .main-content {
   flex-grow: 1;
   transition: margin-left 0.3s ease;
-  //margin-left: 250px;
-  padding: 2rem;
+ // padding: 2rem;
   
   &.sidebar-collapsed {
     margin-left: 80px;
