--- a/src/app/shared/components/search/search.component.scss
+++ b/src/app/shared/components/search/search.component.scss
@@ -10,7 +10,7 @@
   }
   .search-button {
     padding: 0.5rem 1rem;
-    background-color: var(--primary-color);
+    background-color: $primary-color;
     color: white;
     border: none;
     border-radius: 0 4px 4px 0;
