--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -1,10 +1,11 @@
+@import '../../../assets/styles/theme';
 .dashboard {
     padding: 2rem;
   }
   
   h1 {
     margin-bottom: 2rem;
-    color: var(--primary-color);
+    color: $primary-color;
   }
   
   .stats-grid {
@@ -29,19 +30,19 @@
   
     h3 {
       margin-top: 0;
-      color: var(--primary-color);
+      color: $primary-color;
     }
   
     .count {
       font-size: 2.5rem;
       font-weight: bold;
       margin: 0.5rem 0;
-      color: var(--text-color);
+      color: $text-color;
     }
   
     p:last-child {
       margin-bottom: 0;
-      color: var(--text-color);
+      color: $text-color;
       opacity: 0.8;
     }
   }
@@ -54,7 +55,7 @@
   
     h2 {
       margin-top: 0;
-      color: var(--primary-color);
+      color: $primary-color;
     }
   }
   
@@ -80,7 +81,7 @@
       }
   
       small {
-        color: var(--text-color);
+        color: $text-color;
         opacity: 0.7;
       }
     }
