--- a/src/app/features/products/products-list/products-list.component.scss
+++ b/src/app/features/products/products-list/products-list.component.scss
@@ -1,10 +1,12 @@
+@import '../../../../assets/styles/theme';
+
 .container {
     padding: 2rem;
   }
   
   h1 {
     margin-bottom: 2rem;
-    color: var(--primary-color);
+    color: $primary-color;
   }
   
   .grid {
@@ -40,6 +42,6 @@
       padding: 1rem;
       margin: 0;
       font-size: 1.1rem;
-      color: var(--text-color);
+      color: $text-color;
     }
   }
