--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -1,27 +1,35 @@
-:root {
-    --primary-color: #5d5e61;
-    --secondary-color: #a4cbec;
-    --text-color: #333333;
-    --background-color: #f5f5f5;
-  }
+//:root {
+    $primary-color: #3f3f3e;
+    $secondary-color: #a4cbec;
+    $text-color: #242020;
+    $background-color: #f5f5f5;
+    $success-color: #4caf50;
+    $error-color: #f44336;
+    $text-primary: #212121;
+    $text-secondary: #757575;
+  //}
   
+  // Shadows
+  $shadow-sm: 0 2px 8px rgba(0,0,0,0.1);
+  $shadow-md: 0 4px 12px rgba(0,0,0,0.15);
+
   body {
     background-color: var(--background-color);
-    color: var(--text-color);
+    color: $text-color;
     font-family: 'Roboto', sans-serif;
   }
   
   a {
-    color: var(--primary-color);
+    color: $primary-color;
     &:hover {
-      color: var(--secondary-color);
+      color: $secondary-color;
     }
   }
   
   .button {
-    background-color: var(--primary-color);
+    background-color: $primary-color;
     color: white;
     &:hover {
-      background-color: var(--secondary-color);
+      background-color: $secondary-color;
     }
   }
