--- a/src/app/features/employees/employees-list/employees-list.component.scss
+++ b/src/app/features/employees/employees-list/employees-list.component.scss
@@ -1,3 +1,4 @@
+@use '../../../../assets/styles/search' as search;
 @import '../../../../assets/styles/theme';
 
 .employee-list-container {
@@ -11,9 +12,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1.5rem;
+  
   height: 100%;
-  //position: relative;
+  position: relative;
 
   .loading-overlay {
     position: absolute;
@@ -38,16 +39,43 @@
   }
 
   .toolbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    border-radius: 4px;
-    background-color: white;
+    @include search.search-toolbar;
 
-    mat-form-field {
-      width: 300px;
-    }
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    // padding: 12px;
+    // border-radius: 4px;
+    // background-color: white;
+    // margin-top: 4px;
+
+    .search-wrapper {
+
+      @include search.search-wrapper-styles;
+
+       // Responsive adjustment
+      @media (max-width: 768px) {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 12px;
+      }
+    //   position: relative;
+    //   display: flex;
+    //   align-items: center;
+    //   margin-left: auto; /* Pushes search to the right */
+    //   width: 240px;
+  
+    //   app-search {
+    //     width: 100%;
+    //   }
+  
+    //   mat-icon[matSuffix] {
+    //     position: absolute;
+    //     right: 8px;
+    //     color: rgba(0, 0, 0, 0.54);
+    //     cursor: pointer;
+    //   }
+     }
   }
 
   .table-container {
